--- a/bn.po
+++ b/bn.po
@@ -24,7 +24,7 @@ msgstr "টর প্রস্তুত"
 
 #: config/chroot_local-includes/etc/NetworkManager/dispatcher.d/60-tor-ready.sh:40
 msgid "You can now access the Internet."
-msgstr ""
+msgstr "আপনি এখন ইন্টারনেট অ্যাক্সেস করতে পারেন।"
 
 #: config/chroot_local-includes/etc/whisperback/config.py:66
 #, python-format
@@ -42,10 +42,23 @@ msgid ""
 "confirm that you are using Tails.\n"
 "</p>\n"
 msgstr ""
+"<h1> আপনার বাগ ঠিক করার জন্য আমাদের সাহায্য করুন! </ h1>\n"
+"<p> <a href=\"%s\"> আমাদের বাগ রিপোর্টিং নির্দেশাবলী </a> পড়ুন। </ p>\n"
+"<p> <strong> প্রয়োজনের বেশি ব্যক্তিগত তথ্য অন্তর্ভুক্ত করবেন না\n"
+" </ strong> </ p &>\n"
+"<h2> আমাদের একটি ইমেল ঠিকানা দেওয়ার বিষয়ে </ h2>\n"
+"<P> যে\n"
+"আমাদের একটি ইমেল ঠিকানা প্রদান আমরা আপনাকে সমস্যা ব্যাখ্যা করতে  যোগাযোগ করতে "
+"করব। এই\n"
+"আমরা যে রিপোর্টগুলি পেয়েছি তার বেশিরভাগ রিপোর্টগুলির জন্য প্রয়োজন হয়\n"
+"কোন যোগাযোগের তথ্য ব্যতীত অর্থহীন হয়। অন্যদিকে এটি এটি প্রদান করে\n"
+"আপনার ইমেইল বা ইন্টারনেট প্রদানকারী, যেমন eavesdroppers জন্য একটি সুযোগ\n"
+"আপনি পেরেক ব্যবহার করছেন তা নিশ্চিত করুন\n"
+"? </ P>\n"
 
 #: config/chroot_local-includes/usr/local/bin/electrum:57
 msgid "Persistence is disabled for Electrum"
-msgstr ""
+msgstr "অধ্যবসায় জন্য ইস্ট্রাম নিষ্ক্রিয় করা হয়েছে"
 
 #: config/chroot_local-includes/usr/local/bin/electrum:59
 msgid ""
@@ -53,62 +66,67 @@ msgid ""
 "Bitcoin wallet. It is strongly recommended to only run Electrum when its "
 "persistence feature is activated."
 msgstr ""
+"যখন আপনি টাইলস পুনরায় চালু করবেন, তখন আপনার বিটকয়েন ওয়ালেট সহ সব ইলেক্ট্রামের "
+"ডাটা হারিয়ে যাবে। এটি দৃঢ়ভাবে শুধুমাত্র ইন্টিগ্রেটে চালানোর জন্য সুপারিশ করা হয় যখন "
+"তার দৃঢ়তা বৈশিষ্ট্য সক্রিয় করা হয়।"
 
 #: config/chroot_local-includes/usr/local/bin/electrum:60
 msgid "Do you want to start Electrum anyway?"
-msgstr ""
+msgstr "আপনি কি শুরু করতে চান Electrum যাহাই হউক না কেন?"
 
 #: config/chroot_local-includes/usr/local/bin/electrum:63
 #: config/chroot_local-includes/usr/local/bin/liferea:33
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:41
 msgid "_Launch"
-msgstr ""
+msgstr "_Launch"
 
 #: config/chroot_local-includes/usr/local/bin/electrum:64
 #: config/chroot_local-includes/usr/local/bin/liferea:32
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:42
 msgid "_Exit"
-msgstr ""
+msgstr "_Exit"
 
 #: config/chroot_local-includes/usr/local/bin/liferea:18
 msgid "Liferea is deprecated"
-msgstr ""
+msgstr "Liferea অপ্রচলিত"
 
 #: config/chroot_local-includes/usr/local/bin/liferea:19
 msgid "Do you wish to start Liferea anyway?"
-msgstr ""
+msgstr "আপনি কি লাইফরিয়া শুরু করতে চান?"
 
 #: config/chroot_local-includes/usr/local/bin/liferea:21
 msgid ""
 "Due to security concerns the Liferea feed reader will be removed from Tails "
 "by the end of 2018. Please migrate your feeds to Thunderbird."
 msgstr ""
+"নিরাপত্তাজনিত কারণে 2018 সালের শেষ নাগাদ লাইফলরি ফিড রিডারকে টাল থেকে সরিয়ে "
+"দেওয়া হবে। দয়া করে আপনার ফিড থান্ডারবার্ড এ স্থানান্তর করুন।"
 
 #: config/chroot_local-includes/usr/share/gnome-shell/extensions/status-menu-helper@tails.boum.org/extension.js:75
 msgid "Restart"
-msgstr ""
+msgstr "পুনরায় চালু করুন"
 
 #: config/chroot_local-includes/usr/share/gnome-shell/extensions/status-menu-helper@tails.boum.org/extension.js:78
 msgid "Lock screen"
-msgstr ""
+msgstr "লক স্ক্রিন"
 
 #: config/chroot_local-includes/usr/share/gnome-shell/extensions/status-menu-helper@tails.boum.org/extension.js:81
 msgid "Power Off"
-msgstr ""
+msgstr "যন্ত্র বন্ধ"
 
 #: config/chroot_local-includes/usr/local/bin/tails-about:22
 #: ../config/chroot_local-includes/usr/share/desktop-directories/Tails.directory.in.h:1
 msgid "Tails"
-msgstr ""
+msgstr "Tails"
 
 #: config/chroot_local-includes/usr/local/bin/tails-about:25
 #: ../config/chroot_local-includes/usr/share/applications/tails-about.desktop.in.h:1
 msgid "About Tails"
-msgstr ""
+msgstr "Tails সম্পর্কে"
 
 #: config/chroot_local-includes/usr/local/bin/tails-about:35
 msgid "The Amnesic Incognito Live System"
-msgstr ""
+msgstr "অ্যামেসিক ছদ্মবেশী লাইভ সিস্টেম"
 
 #: config/chroot_local-includes/usr/local/bin/tails-about:36
 #, python-format
@@ -116,33 +134,37 @@ msgid ""
 "Build information:\n"
 "%s"
 msgstr ""
+"তথ্য তৈরি করুন::\n"
+"%s"
 
 #: config/chroot_local-includes/usr/local/bin/tails-about:54
 msgid "not available"
-msgstr ""
+msgstr "পাওয়া যায় না"
 
 #: config/chroot_local-includes/usr/local/sbin/tails-additional-software:170
 msgid "Your additional software installation failed"
-msgstr ""
+msgstr "আপনার অতিরিক্ত সফ্টওয়্যার ইনস্টলেশন ব্যর্থ হয়েছে"
 
 #: config/chroot_local-includes/usr/local/sbin/tails-additional-software:171
 msgid ""
 "The installation failed. Please check your additional software "
 "configuration, or read the system log to understand better the problem."
 msgstr ""
+"ইনস্টলেশন ব্যর্থ হয়েছে। আপনার অতিরিক্ত সফ্টওয়্যার কনফিগারেশন চেক করুন, বা সমস্যার "
+"বুঝতে সিস্টেম লগ পড়ুন।"
 
 #: config/chroot_local-includes/usr/local/sbin/tails-additional-software:177
 msgid "Your additional software are installed"
-msgstr ""
+msgstr "আপনার অতিরিক্ত সফ্টওয়্যার ইনস্টল করা হয়েছে।"
 
 #: config/chroot_local-includes/usr/local/sbin/tails-additional-software:178
 msgid "Your additional software are ready to use."
-msgstr ""
+msgstr "আপনার অতিরিক্ত সফ্টওয়্যার ব্যবহার করার জন্য প্রস্তুত।"
 
 #: config/chroot_local-includes/usr/local/sbin/tails-additional-software:194
 #: config/chroot_local-includes/usr/local/sbin/tails-additional-software:204
 msgid "Your additional software upgrade failed"
-msgstr ""
+msgstr "আপনার অতিরিক্ত সফ্টওয়্যার আপগ্রেড ব্যর্থ হয়েছে"
 
 #: config/chroot_local-includes/usr/local/sbin/tails-additional-software:195
 msgid ""
@@ -150,14 +172,17 @@ msgid ""
 "Please check your network connection, try to restart Tails, or read the "
 "system log to understand better the problem."
 msgstr ""
+"আপগ্রেডের চেক ব্যর্থ হয়েছে। এটি একটি নেটওয়ার্ক সমস্যা কারণে হতে পারে। দয়া করে "
+"আপনার নেটওয়ার্ক সংযোগ চেক করুন, টয়লেট পুনরায় আরম্ভ করার চেষ্টা করুন, বা সমস্যাটি "
+"ভালভাবে বোঝার জন্য সিস্টেম লগটি পড়ুন।"
 
 #: config/chroot_local-includes/usr/local/sbin/tails-additional-software:201
 msgid "Your additional software are up to date"
-msgstr ""
+msgstr "আপনার অতিরিক্ত সফ্টওয়্যার আপ টু ডেট"
 
 #: config/chroot_local-includes/usr/local/sbin/tails-additional-software:202
 msgid "The upgrade was successful."
-msgstr ""
+msgstr "আপগ্রেড সফল হয়েছে।"
 
 #: config/chroot_local-includes/usr/local/sbin/tails-additional-software:205
 msgid ""
@@ -165,33 +190,38 @@ msgid ""
 "your network connection, try to restart Tails, or read the system log to "
 "understand better the problem."
 msgstr ""
+"আপগ্রেড ব্যর্থ হয়েছে এটি একটি নেটওয়ার্ক সমস্যা কারণে হতে পারে। দয়া করে আপনার "
+"নেটওয়ার্ক সংযোগ চেক করুন, টয়লেট পুনরায় আরম্ভ করার চেষ্টা করুন, বা সমস্যাটি ভালভাবে "
+"বোঝার জন্য সিস্টেম লগটি পড়ুন।"
 
 #: config/chroot_local-includes/usr/local/lib/tails-htp-notify-user:52
 msgid "Synchronizing the system's clock"
-msgstr ""
+msgstr "সিস্টেমের ঘড়িকে সিঙ্ক্রোনাইজ করা হচ্ছে"
 
 #: config/chroot_local-includes/usr/local/lib/tails-htp-notify-user:53
 msgid ""
 "Tor needs an accurate clock to work properly, especially for Hidden "
 "Services. Please wait..."
 msgstr ""
+"টর সঠিকভাবে কাজ করার জন্য একটি সঠিক ঘড়ি প্রয়োজন, বিশেষ করে লুকানো পরিষেবাগুলির "
+"জন্য অনুগ্রহপূর্বক অপেক্ষা করুন..."
 
 #: config/chroot_local-includes/usr/local/lib/tails-htp-notify-user:87
 msgid "Failed to synchronize the clock!"
-msgstr ""
+msgstr "ঘড়ি সিঙ্ক্রোনাইজ করতে ব্যর্থ!"
 
 #: config/chroot_local-includes/usr/local/bin/tails-security-check:124
 msgid "This version of Tails has known security issues:"
-msgstr ""
+msgstr "Tails এর এই সংস্করণ নিরাপত্তা বিষয় পরিচিত হয়েছে:"
 
 #: config/chroot_local-includes/usr/local/bin/tails-security-check:134
 msgid "Known security issues"
-msgstr ""
+msgstr "পরিচিত নিরাপত্তা বিষয়"
 
 #: config/chroot_local-includes/usr/local/lib/tails-spoof-mac:52
 #, sh-format
 msgid "Network card ${nic} disabled"
-msgstr ""
+msgstr "নেটওয়ার্ক কার্ড ${nic} অক্ষম"
 
 #: config/chroot_local-includes/usr/local/lib/tails-spoof-mac:53
 #, sh-format
@@ -199,10 +229,13 @@ msgid ""
 "MAC spoofing failed for network card ${nic_name} (${nic}) so it is temporarily disabled.\n"
 "You might prefer to restart Tails and disable MAC spoofing."
 msgstr ""
+"নেটওয়ার্ক কার্ড ${nic_name} (${nic}) জন্য MAC স্পুফিং ব্যর্থ হয়েছে তাই এটি "
+"অস্থায়ীভাবে অক্ষম করা হয়েছে।\n"
+"আপনি Tailsপুনর্সূচনা এবং ম্যাক spoofing অক্ষম করতে পারে।"
 
 #: config/chroot_local-includes/usr/local/lib/tails-spoof-mac:62
 msgid "All networking disabled"
-msgstr ""
+msgstr "সমস্ত নেটওয়ার্কিং নিষ্ক্রিয়"
 
 #: config/chroot_local-includes/usr/local/lib/tails-spoof-mac:63
 #, sh-format
@@ -210,6 +243,9 @@ msgid ""
 "MAC spoofing failed for network card ${nic_name} (${nic}). The error recovery also failed so all networking is disabled.\n"
 "You might prefer to restart Tails and disable MAC spoofing."
 msgstr ""
+"নেটওয়ার্ক কার্ড ${nic_name} (${nic}) জন্য MAC স্পুফিং ব্যর্থ হয়েছে। ত্রুটি পুনরুদ্ধারের "
+"ব্যর্থ তাই সমস্ত নেটওয়ার্কিং নিষ্ক্রিয় করা হয়।\n"
+"আপনি পুচ্ছ পুনর্সূচনা এবং ম্যাক spoofing অক্ষম করতে পারে।"
 
 #: config/chroot_local-includes/usr/local/bin/tails-screen-locker:109
 msgid "Lock Screen"
@@ -222,11 +258,11 @@ msgstr "Cancel"
 
 #: config/chroot_local-includes/usr/local/bin/tails-screen-locker:124
 msgid "Screen Locker"
-msgstr ""
+msgstr "স্ক্রিন লকার"
 
 #: config/chroot_local-includes/usr/local/bin/tails-screen-locker:130
 msgid "Set up a password to unlock the screen."
-msgstr ""
+msgstr "স্ক্রিন আনলক করতে একটি পাসওয়ার্ড সেট আপ করুন।"
 
 #: config/chroot_local-includes/usr/local/bin/tails-screen-locker:135
 msgid "Password"
@@ -248,11 +284,20 @@ msgid ""
 "Or do a manual upgrade.\n"
 "See https://tails.boum.org/doc/first_steps/upgrade#manual\""
 msgstr ""
+"\"<b>আপগ্রেড দেখার জন্য উপলব্ধ যথেষ্ট মেমরি নেই।</b>\n"
+"\n"
+"নিশ্চিত করুন যে এই সিস্টেম টাইল চালানোর জন্য প্রয়োজনীয়তা সন্তুষ্ট করুন\n"
+"দেখুন:  file:///usr/share/doc/tails/website/doc/about/requirements.en.html\n"
+"\n"
+"আবার আপগ্রেডের জন্য পরীক্ষা করতে টাইল পুনরায় আরম্ভ করার চেষ্টা করুন।\n"
+"\n"
+"বা ম্যানুয়াল আপগ্রেড কি।\n"
+"দেখুন https://tails.boum.org/doc/first_steps/upgrade#manual \""
 
 #: config/chroot_local-includes/usr/local/bin/tails-upgrade-frontend-wrapper:72
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:27
 msgid "error:"
-msgstr ""
+msgstr "ত্রুটি:"
 
 #: config/chroot_local-includes/usr/local/bin/tails-upgrade-frontend-wrapper:73
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:28
@@ -261,17 +306,19 @@ msgstr "সমস্যা"
 
 #: config/chroot_local-includes/usr/local/lib/tails-virt-notify-user:71
 msgid "Warning: virtual machine detected!"
-msgstr ""
+msgstr "সতর্কতা: ভার্চুয়াল মেশিন সনাক্ত!"
 
 #: config/chroot_local-includes/usr/local/lib/tails-virt-notify-user:73
 msgid ""
 "Both the host operating system and the virtualization software are able to "
 "monitor what you are doing in Tails."
 msgstr ""
+"উভয় হোস্ট অপারেটিং সিস্টেম এবং ভার্চুয়ালাইজেশন সফটওয়্যারটি আপনি কি টাইলগুলিতে "
+"করছেন তা নিরীক্ষণ করতে সক্ষম।"
 
 #: config/chroot_local-includes/usr/local/lib/tails-virt-notify-user:76
 msgid "Warning: non-free virtual machine detected!"
-msgstr ""
+msgstr "সতর্কতা: অ-মুক্ত ভার্চুয়াল মেশিন সনাক্ত!"
 
 #: config/chroot_local-includes/usr/local/lib/tails-virt-notify-user:78
 msgid ""
@@ -280,6 +327,9 @@ msgid ""
 "trustworthy, for both the host operating system and the virtualization "
 "software."
 msgstr ""
+"উভয় হোস্ট অপারেটিং সিস্টেম এবং ভার্চুয়ালাইজেশন সফটওয়্যারটি আপনি কি টাইলগুলিতে "
+"করছেন তা নিরীক্ষণ করতে সক্ষম। হোস্ট অপারেটিং সিস্টেম এবং ভার্চুয়ালাইজেশন সফ্টওয়্যার "
+"উভয়ের জন্য শুধুমাত্র ফ্রি সফ্টওয়্যার নির্ভরযোগ্য বলে মনে করা যেতে পারে।"
 
 #: config/chroot_local-includes/usr/local/lib/tails-virt-notify-user:83
 msgid "Learn more"
@@ -287,19 +337,19 @@ msgstr "আরও জানুন"
 
 #: config/chroot_local-includes/usr/local/bin/tor-browser:43
 msgid "Tor is not ready"
-msgstr ""
+msgstr "টর প্রস্তুত না"
 
 #: config/chroot_local-includes/usr/local/bin/tor-browser:44
 msgid "Tor is not ready. Start Tor Browser anyway?"
-msgstr ""
+msgstr "টর প্রস্তুত না টর ব্রাউজার যাইহোক শুরু?"
 
 #: config/chroot_local-includes/usr/local/bin/tor-browser:45
 msgid "Start Tor Browser"
-msgstr ""
+msgstr "টর ব্রাউজার শুরু করুন"
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:38
 msgid "Do you really want to launch the Unsafe Browser?"
-msgstr ""
+msgstr "আপনি কি সত্যিই অসুরক্ষিত ব্রাউজার চালু করতে চান?"
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:40
 msgid ""
@@ -307,74 +357,83 @@ msgid ""
 "use the Unsafe Browser if necessary, for example\\nif you have to login or "
 "register to activate your Internet connection."
 msgstr ""
+"অনিরাপদ ব্রাউজারের মধ্যে নেটওয়ার্ক ক্রিয়াকলাপটি <b> বেনামী নয় </ b>। \\ N "
+"প্রয়োজন হলে অনিরাপদ ব্রাউজার ব্যবহার করুন, উদাহরণস্বরূপ \\ n যদি আপনার ইন্টারনেট "
+"সংযোগ সক্রিয় করার জন্য আপনাকে লগইন বা নিবন্ধন করতে হয়।"
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:51
 msgid "Starting the Unsafe Browser..."
-msgstr ""
+msgstr "অসুরক্ষিত ব্রাউজার শুরু হচ্ছে ..."
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:52
 msgid "This may take a while, so please be patient."
-msgstr ""
+msgstr "এটি একটি সময় নিতে পারে, তাই ধৈর্য থাকুন।"
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:57
 msgid "Shutting down the Unsafe Browser..."
-msgstr ""
+msgstr "অসুরক্ষিত ব্রাউজার বন্ধ করা হচ্ছে ..."
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:58
 msgid ""
 "This may take a while, and you may not restart the Unsafe Browser until it "
 "is properly shut down."
 msgstr ""
+"এটি একটি সময় নিতে পারে, এবং আপনি সঠিকভাবে বন্ধ না হওয়া পর্যন্ত অনিরাপদ "
+"ব্রাউজারটি পুনরায় চালু করতে পারবেন না।"
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:70
 msgid "Failed to restart Tor."
-msgstr ""
+msgstr "টর পুনরায় আরম্ভ করতে ব্যর্থ হয়েছে"
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:84
 #: ../config/chroot_local-includes/usr/share/applications/unsafe-browser.desktop.in.h:1
 msgid "Unsafe Browser"
-msgstr ""
+msgstr "অসুরক্ষিত ব্রাউজার"
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:92
 msgid ""
 "Another Unsafe Browser is currently running, or being cleaned up. Please "
 "retry in a while."
 msgstr ""
+"অন্য একটি অনিরাপদ ব্রাউজার বর্তমানে চলছে বা পরিষ্কার হচ্ছে। কিছুক্ষণের মধ্যে পুনরায় "
+"চেষ্টা করুন।"
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:100
 msgid "Failed to setup chroot."
-msgstr ""
+msgstr "সেটআপ ক্রুটোতে ব্যর্থ হয়েছে"
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:105
 msgid "Failed to configure browser."
-msgstr ""
+msgstr "ব্রাউজার কনফিগার করতে ব্যর্থ"
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:111
 msgid ""
 "No DNS server was obtained through DHCP or manually configured in "
 "NetworkManager."
 msgstr ""
+"কোনও DNS সার্ভার DHCP এর মাধ্যমে পাওয়া যায় না বা ম্যানুয়ালি কনফিগার করা হয়েছে "
+"NetworkManager।"
 
 #: config/chroot_local-includes/usr/local/sbin/unsafe-browser:117
 msgid "Failed to run browser."
-msgstr ""
+msgstr "ব্রাউজার চালাতে ব্যর্থ হয়েছে"
 
 #: ../config/chroot_local-includes/etc/skel/Desktop/Report_an_error.desktop.in.h:1
 msgid "Report an error"
-msgstr ""
+msgstr "একটি ত্রুটি রিপোর্ট করুন"
 
 #: ../config/chroot_local-includes/etc/skel/Desktop/tails-documentation.desktop.in.h:1
 #: ../config/chroot_local-includes/usr/share/applications/tails-documentation.desktop.in.h:1
 msgid "Tails documentation"
-msgstr ""
+msgstr "টাইল ডকুমেন্টেশন"
 
 #: ../config/chroot_local-includes/usr/share/applications/tails-documentation.desktop.in.h:2
 msgid "Learn how to use Tails"
-msgstr ""
+msgstr "Tails ব্যবহার কিভাবে শিখুন?"
 
 #: ../config/chroot_local-includes/usr/share/applications/tails-about.desktop.in.h:2
 msgid "Learn more about Tails"
-msgstr ""
+msgstr "Tails সম্পর্কে আরও জানুন"
 
 #: ../config/chroot_local-includes/usr/share/applications/tor-browser.desktop.in.h:1
 msgid "Tor Browser"
@@ -382,20 +441,20 @@ msgstr "টর ব্রাউজার"
 
 #: ../config/chroot_local-includes/usr/share/applications/tor-browser.desktop.in.h:2
 msgid "Anonymous Web Browser"
-msgstr ""
+msgstr "নামবিহীন ওয়েব ব্রাউজার"
 
 #: ../config/chroot_local-includes/usr/share/applications/unsafe-browser.desktop.in.h:2
 msgid "Browse the World Wide Web without anonymity"
-msgstr ""
+msgstr "গোপনীয়তা ছাড়াই ওয়ার্ল্ড ওয়াইড ওয়েব ব্রাউজ করুন"
 
 #: ../config/chroot_local-includes/usr/share/applications/unsafe-browser.desktop.in.h:3
 msgid "Unsafe Web Browser"
-msgstr ""
+msgstr "অসুরক্ষিত ওয়েব ব্রাউজার"
 
 #: ../config/chroot_local-includes/usr/share/desktop-directories/Tails.directory.in.h:2
 msgid "Tails specific tools"
-msgstr ""
+msgstr "টাইলস নির্দিষ্ট সরঞ্জাম"
 
 #: ../config/chroot_local-includes/usr/share/polkit-1/actions/org.boum.tails.root-terminal.policy.in.h:1
 msgid "To start a Root Terminal, you need to authenticate."
-msgstr ""
+msgstr "একটি রুট টার্মিনাল শুরু করার জন্য, আপনি প্রমাণীকরণ প্রয়োজন।"
