related to #12095 remove dead language teams, merge bn-bn_BD/af-af_AL before

--- a/af/LC_MESSAGES/bridgedb.po
+++ b/af/LC_MESSAGES/bridgedb.po
@@ -251,7 +251,7 @@ msgstr ""
 
 #: bridgedb/strings.py:101
 msgid "What are bridges?"
-msgstr ""
+msgstr "Wat is Brûe?"
 
 #: bridgedb/strings.py:102
 #, python-format
@@ -260,7 +260,7 @@ msgstr ""
 
 #: bridgedb/strings.py:107
 msgid "I need an alternative way of getting bridges!"
-msgstr ""
+msgstr "Ek benodig 'n alternatiewe manier om brûe te bekom!"
 
 #: bridgedb/strings.py:108
 #, python-format
