--- a/bn/LC_MESSAGES/bridgedb.po
+++ b/bn/LC_MESSAGES/bridgedb.po
@@ -227,6 +227,10 @@ msgid ""
 "using Tor.\n"
 "\n"
 msgstr ""
+"BridgeDB বিভিন্ন %s ধরনের প্ল্যাগেবল ট্রান্সপোর্ট %s সঙ্গে ব্রিজ প্রদান করতে পারেন,\n"
+"যা টর নেটওয়ার্ককে আপনার সংযোগগুলি অপ্রতিরোধ্য করতে সহায়তা করে, এটি আরও বেশি করে তৈরি করে\n"
+"যে কেউ আপনার ইন্টারনেট ট্র্যাফিকটি দেখে আপনার পক্ষে তা নির্ধারণ করা কঠিন\n"
+"টর ব্যবহার করে\n"
 
 #. TRANSLATORS: Please DO NOT translate "Pluggable Transports".
 #: bridgedb/strings.py:79
@@ -249,6 +253,9 @@ msgid ""
 "help to circumvent internet censorship in many cases.\n"
 "\n"
 msgstr ""
+"উপরন্তু, ব্রিজডিবি এর মধ্যে প্রচুর প্লেইন-ভ্যালি-ভ্যানিলা ব্রিজ %s রয়েছে\n"
+"প্ল্যাগেবল ট্রান্সপোর্ট %s যা হয়তো ঠান্ডা বলে মনে করে না, তবে তারা এখনও করতে পারে\n"
+"অনেক ক্ষেত্রে ইন্টারনেট সেন্সরশিপকে বাধা দিতে সাহায্য\n"
 
 #: bridgedb/strings.py:101
 msgid "What are bridges?"
@@ -270,6 +277,9 @@ msgid ""
 "send the email using an address from one of the following email providers:\n"
 "%s, %s or %s."
 msgstr ""
+"ব্রিজ পেতে আরেকটি উপায় হল %s থেকে একটি ইমেল পাঠানো। দয়া করে মনে রাখবেন যে আপনাকে অবশ্যই\n"
+"নিম্নোক্ত ইমেল প্রদানকারীদের মধ্যে একটি ঠিকানা ব্যবহার করে ইমেল পাঠাতে হবে: %s\n"
+", %s বা %s।"
 
 #: bridgedb/strings.py:115
 msgid "My bridges don't work! I need help!"
@@ -290,6 +300,9 @@ msgid ""
 "bridges and Pluggable Transports you tried to use, your Tor Browser version,\n"
 "and any messages which Tor gave out, etc."
 msgstr ""
+"তালিকাটি সহ আপনার কেস হিসাবে যতটা তথ্য অন্তর্ভুক্ত করার চেষ্টা করুন,\n"
+"সেতু এবং প্ল্যাগেবল ট্রান্সফর্মগুলি আপনি ব্যবহার করার চেষ্টা করেছেন, আপনার টর ব্রাউজারের সংস্করণ,\n"
+"এবং টর দিয়েছেন এমন কোন বার্তা ইত্যাদি।"
 
 #: bridgedb/strings.py:128
 msgid "Here are your bridge lines:"
@@ -332,6 +345,9 @@ msgid ""
 "page %s and then follow the instructions there for downloading and starting\n"
 "Tor Browser."
 msgstr ""
+"টর ব্রাউজারে ব্রিজ প্রবেশ করতে, প্রথমে %s টর ব্রাউজার ডাউনলোড করুন\n"
+"পৃষ্ঠা %s এবং তারপর ডাউনলোড এবং শুরু করার জন্য সেখানে নির্দেশাবলী অনুসরণ করুন\n"
+"টর ব্রাউজার"
 
 #. TRANSLATORS: Please DO NOT translate "Tor".
 #: bridgedb/strings.py:151
@@ -339,6 +355,8 @@ msgid ""
 "When the 'Tor Network Settings' dialogue pops up, click 'Configure' and follow\n"
 "the wizard until it asks:"
 msgstr ""
+"যখন 'টর নেটওয়ার্ক সেটিংস' সংলাপ পপ আপ, 'কনফিগার' ক্লিক করুন এবং অনুসরণ করুন\n"
+"উইজার্ড যতক্ষণ না জিজ্ঞাসা করে:"
 
 #. TRANSLATORS: Please DO NOT translate "Tor".
 #: bridgedb/strings.py:155
@@ -346,6 +364,8 @@ msgid ""
 "Does your Internet Service Provider (ISP) block or otherwise censor connections\n"
 "to the Tor network?"
 msgstr ""
+"আপনার ইন্টারনেট সার্ভিস প্রোভাইডার (আইএসপি) ব্লক বা অন্যথায় সংযোগ সেন্সর করে না\n"
+"টর নেটওয়ার্ক থেকে?"
 
 #. TRANSLATORS: Please DO NOT translate "Tor".
 #: bridgedb/strings.py:159
@@ -355,6 +375,10 @@ msgid ""
 "you should be good to go! If you experience trouble, try clicking the 'Help'\n"
 "button in the 'Tor Network Settings' wizard for further assistance."
 msgstr ""
+"'হ্যাঁ' নির্বাচন করুন এবং তারপর 'পরবর্তী' ক্লিক করুন আপনার নতুন সেতু কনফিগার করতে, কপি এবং\n"
+"টেক্সট ইনপুট বাক্সে সেতু লাইন আটকান। অবশেষে, 'সংযুক্ত' ক্লিক করুন, এবং\n"
+"আপনি যেতে ভাল হতে হবে! যদি আপনি সমস্যায় পড়েন তবে 'সহায়তা' ক্লিক করার চেষ্টা করুন\n"
+"আরও সহায়তা জন্য 'টর নেটওয়ার্ক সেটিংস' উইজার্ড মধ্যে বাটন"
 
 #: bridgedb/strings.py:167
 msgid "Displays this message."
@@ -374,10 +398,10 @@ msgstr "IPv6 ব্রিজের জন্য অনুরোধ"
 #. TRANSLATORS: Please DO NOT translate the word the word "TYPE".
 #: bridgedb/strings.py:174
 msgid "Request a Pluggable Transport by TYPE."
-msgstr ""
+msgstr "TYPE দ্বারা প্ল্যাগেবল ট্রান্সপোর্টের অনুরোধ করুন"
 
 #. TRANSLATORS: Please DO NOT translate "BridgeDB".
 #. TRANSLATORS: Please DO NOT translate "GnuPG".
 #: bridgedb/strings.py:177
 msgid "Get a copy of BridgeDB's public GnuPG key."
-msgstr ""
+msgstr "BridgeDB এর সর্বজনীন GnuPG কীটির একটি অনুলিপি পান।"
